--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "qrcode.react": "^0.8.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "react-transition-group": "^2.4.0",
+    "styled-components": "^3.4.5"
   },
   "scripts": {
     "start": "npm-run-all -p build-css:watch start:js",
