--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "npm-run-all -p build-css:watch start:js",
     "start:js": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn build-css && react-scripts build",
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "build-css:watch": "yarn build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
